tile spacing fix

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -14,6 +14,15 @@
     #main a{
         width: 10vw;
     }
+    .listItem{
+        max-width: 130px;
+    }
+    #listContainer{
+        width: 100vw;
+        max-width: 1000px;
+        position: relative;
+        margin: 0 auto;
+    }
     #list {
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
